# wasm-verifier

./: Cargo.toml  Makefile  README  wasm_verifier_arithmetic.wasm
src/: lib.rs
src/gadget/: arithmetic.rs  mod.rs
